feat: estilizando página de introdução

--- a/src/app/intro/intro.page.html
+++ b/src/app/intro/intro.page.html
@@ -1,9 +1,19 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>intro</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
+<ion-content class="wrapper__content">
+  <section class="wrapper__content__section">
+    <video controls class="wrapper__content__section__video">
+      <source src="movie.mp4" type="video/mp4">
+      <source src="movie.ogg" type="video/ogg">
+      Seu dispositivo não suporta a tag de video do HTML.
+    </video>
+  </section>
+  <h1 class="wrapper__content__title">Introdução</h1>
+  <p class="wrapper__content__paragraph">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a diam in ex faucibus malesuada nec quis velit.
+    Pellentesque congue ornare congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+    himenaeos. Nunc elit mi, blandit vitae libero commodo, tincidunt sagittis sem. Duis scelerisque mi non viverra
+    cursus. Aliquam tincidunt aliquam erat nec gravida. Nulla facilisi. Etiam ut dictum nisi. Donec auctor hendrerit
+    luctus. Etiam augue velit, eleifend ullamcorper ipsum non, tincidunt pretium est. Fusce suscipit nulla sed purus
+    venenatis congue. Ut non libero sit amet massa eleifend rutrum.
+  </p>
+  <ion-button color="tertiary" class="wrapper__content__button">Entendido</ion-button>
 </ion-content>
