--- a/src/app/intro/intro.page.html
+++ b/src/app/intro/intro.page.html
@@ -15,6 +15,10 @@
     luctus. Etiam augue velit, eleifend ullamcorper ipsum non, tincidunt pretium est. Fusce suscipit nulla sed purus
     venenatis congue. Ut non libero sit amet massa eleifend rutrum.
   </p>
-  <ion-button color="tertiary" class="wrapper__content__button" (click)="setIntroductionOnLocalstorage()">Entendido
+  <ion-button 
+    color="tertiary" 
+    class="wrapper__content__button" 
+    (click)="setIntroductionOnLocalstorage()">
+    Entendido
   </ion-button>
 </ion-content>
