feat: wip tela inicial

--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -22,14 +22,13 @@
       color="tertiary" 
       class="wrapper__content__button" 
       [disabled]="loginForm.invalid"
-      (click)="setIntroductionOnLocalstorage()">
+      (click)="doLogin()">
       Entrar
     </ion-button>
     <ion-button 
       color="danger" 
       fill="outline" 
-      class="wrapper__content__button" 
-      (click)="setIntroductionOnLocalstorage()">
+      class="wrapper__content__button">
       Quero criar uma conta
     </ion-button>
     
