--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,25 +1,12 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-  color: #8c8c8c;
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+.wrapper__content {
+  &__header {
+    &__toolbar {
+      margin: 1rem 0 1rem;
+      padding-bottom: .5rem;
+      &__avatar {
+        margin-left: 1rem;
+        margin-right: 1rem;
+      }
+    }
+  }
 }
