--- a/src/app/sign-in/sign-in.page.html
+++ b/src/app/sign-in/sign-in.page.html
@@ -19,13 +19,23 @@
     </ion-item>
 
     <ion-item class="wrapper__content__login-form__item">
+      <ion-label position="floating">Telefone</ion-label>
+      <ion-input type="tel" formControlName="phone"></ion-input>
+    </ion-item>
+
+    <ion-item class="wrapper__content__login-form__item">
+      <ion-label position="floating">CPF</ion-label>
+      <ion-input type="text" value="123456789" formControlName="cpf"></ion-input>
+    </ion-item>
+
+    <ion-item class="wrapper__content__login-form__item">
       <ion-label position="floating">Senha</ion-label>
       <ion-input type="password" formControlName="password"></ion-input>
     </ion-item>
 
     <ion-item class="wrapper__content__login-form__item">
       <ion-label position="floating">Confirme sua senha</ion-label>
-      <ion-input type="password" formControlName="passwordConfirm"></ion-input>
+      <ion-input type="password" formControlName="passwordConfirm" [pattern]="signInForm.get('password').value"></ion-input>
     </ion-item>
 
     <ion-button 
