--- a/src/app/sign-in/sign-in.page.scss
+++ b/src/app/sign-in/sign-in.page.scss
@@ -1,28 +1,1 @@
-.wrapper__content {
-  padding: 0 1.5rem;
-  text-align: center;
-
-  &__login-form {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    &__img__wrapper {
-      text-align: center;
-
-      &__img {
-        max-width: 60%;
-      }
-    }
-
-    &__item {
-      margin-bottom: 2rem;
-    }
-  }
-
-  &__button {
-    width: 100%;
-  }
-}
+@import 'modules/forms';
