--- a/src/app/auth/auth.page.scss
+++ b/src/app/auth/auth.page.scss
@@ -4,7 +4,6 @@
 
   &__login-form {
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -14,6 +13,7 @@
 
       &__img {
         max-width: 60%;
+        padding: 1rem 1rem 5rem;        
       }
     }
 
