Concluíndo a validação do formulário de cadastro

--- a/src/app/sign-in/sign-in.page.html
+++ b/src/app/sign-in/sign-in.page.html
@@ -5,16 +5,25 @@
       <ion-label position="floating">Nome</ion-label>
       <ion-input formControlName="name"></ion-input>
     </ion-item>
+    <app-form-field-message *ngIf="isFieldInvalid('name')" [controlErrors]="getControlErrorsList('name')" formFieldName='name'></app-form-field-message>
+
+    <ion-item class="bmd-form__item">
+      <ion-label position="floating">Sobrenome</ion-label>
+      <ion-input formControlName="lastname"></ion-input>
+    </ion-item>
+    <app-form-field-message *ngIf="isFieldInvalid('lastname')" [controlErrors]="getControlErrorsList('lastname')" formFieldName='lastname'></app-form-field-message>
 
     <ion-item class="bmd-form__item">
       <ion-label position="floating">E-mail</ion-label>
       <ion-input type="email" formControlName="email"></ion-input>
     </ion-item>
+    <app-form-field-message *ngIf="isFieldInvalid('email')" [controlErrors]="getControlErrorsList('email')" formFieldName='email'></app-form-field-message>
 
     <ion-item class="bmd-form__item">
       <ion-label position="floating">Telefone</ion-label>
       <ion-input type="tel" formControlName="phone" [brmasker]="{phone: true}"></ion-input>
     </ion-item>
+    <app-form-field-message *ngIf="isFieldInvalid('phone')" [controlErrors]="getControlErrorsList('phone')" formFieldName='phone'></app-form-field-message>
 
     <ion-item class="bmd-form__item">
       <ion-label position="floating">CPF</ion-label>
@@ -26,15 +35,17 @@
       <ion-label position="floating">Senha</ion-label>
       <ion-input type="password" formControlName="password"></ion-input>
     </ion-item>
+    <app-form-field-message *ngIf="isFieldInvalid('password')" [controlErrors]="getControlErrorsList('password')" formFieldName='password'></app-form-field-message>
 
     <ion-item class="bmd-form__item">
       <ion-label position="floating">Confirme sua senha</ion-label>
       <ion-input type="password" formControlName="passwordConfirm" [pattern]="signInForm.get('password').value"></ion-input>
     </ion-item>
+    <app-form-field-message *ngIf="isFieldInvalid('passwordConfirm')" [controlErrors]="getControlErrorsList('passwordConfirm')" formFieldName='passwordConfirm'></app-form-field-message>
 
     <ion-button 
       color="tertiary" 
-      class="wrapper__content__button" 
+      class="bmd-form__button" 
       [disabled]="signInForm.invalid"
       (click)="setIntroductionOnLocalstorage()">
       Cadastrar
