--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -28,7 +28,8 @@
     <ion-button 
       color="danger" 
       fill="outline" 
-      class="wrapper__content__button">
+      class="wrapper__content__button"
+      (click)="createAccount()">
       Quero criar uma conta
     </ion-button>
     
