--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,7 +13,13 @@
       <ion-tab-button tab="map">
         <ion-icon name="map"></ion-icon>
       </ion-tab-button>
+
+      <ion-tab-button>
+        <ion-icon name="exit" (click)="logout()"></ion-icon>
+      </ion-tab-button>      
     </ion-tab-bar>
+    
+    
   </ion-tabs>
 
 </ion-content>
