--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -7,13 +7,13 @@
         alt="Logotipo da Bemed">
     </section>
 
-    <ion-item class="bmd-form-form__item">
+    <ion-item class="bmd-form__item">
       <ion-label position="floating">Login</ion-label>
       <ion-input formControlName="login"></ion-input>
     </ion-item>
     <app-form-field-message *ngIf="isFieldInvalid('login')" [controlErrors]="getControlErrorsList('login')" formFieldName='login'></app-form-field-message>
 
-    <ion-item class="bmd-form-form__item">
+    <ion-item class="bmd-form__item">
       <ion-label position="floating">Senha</ion-label>
       <ion-input type="password" formControlName="password"></ion-input>
     </ion-item>
