fix: ajuste de espaçamentos e texto de intro

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,12 +14,10 @@
         <ion-icon name="map"></ion-icon>
       </ion-tab-button>
 
-      <ion-tab-button>
-        <ion-icon name="exit" (click)="logout()"></ion-icon>
+      <ion-tab-button (click)="logout()">
+        <ion-icon name="exit"></ion-icon>
       </ion-tab-button>      
     </ion-tab-bar>
-    
-    
   </ion-tabs>
 
 </ion-content>
