--- a/src/app/intro/intro.page.scss
+++ b/src/app/intro/intro.page.scss
@@ -4,10 +4,8 @@
   text-align: center;
 
   &__section {
-    padding: 3rem 0 0;
-
     &__video {
-      min-height: 240px;
+      min-height: 100%;
       width: 100%;
     }
   }
@@ -18,6 +16,7 @@
 
   &__paragraph {
     padding: 0 1.5rem;
+    line-height: 1.5rem;
     text-align: justify;
     color: var(--ion-color-step-50);
   }
