feat: integrando mapa

--- a/src/app/home/tabs/map/map.page.html
+++ b/src/app/home/tabs/map/map.page.html
@@ -1,5 +1,6 @@
 <bmd-header></bmd-header>
 
 <ion-content class="ion-padding-start ion-padding-end ">
-  <h1>Página de Map</h1>
+  <!-- <app-map></app-map> -->
+  <div id="map"></div>
 </ion-content>
