feat: ajustando formulário de cadastro

--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -33,6 +33,12 @@
       (click)="createAccount()">
       Quero criar uma conta
     </ion-button>
+
+    <a 
+      href="#" 
+      class="login-form__forgot-pass">
+        esqueci minha senha
+    </a>
     
   </form>
 
