--- a/src/app/auth/auth.page.scss
+++ b/src/app/auth/auth.page.scss
@@ -7,4 +7,8 @@
     max-width: 60%;
     padding: 1rem 1rem 5rem;        
   }
+  &__forgot-pass {
+    display: inline-block;
+    margin-top: 1rem;
+  }
 }
