feat: (wip) chamando end-point de farmácias, adic interceptor e guard

--- a/src/app/home/tabs/home/home.page.html
+++ b/src/app/home/tabs/home/home.page.html
@@ -2,4 +2,9 @@
 
 <ion-content class="ion-padding-start ion-padding-end ">
   <h1>Página de home</h1>
+
+  <code>
+    {{ currentAuth$ | async | json }}
+  </code>
+
 </ion-content>
