--- a/src/app/home/tabs/components/header/header.page.html
+++ b/src/app/home/tabs/components/header/header.page.html
@@ -2,12 +2,12 @@
   <ion-toolbar class="wrapper__content__header__toolbar">
     <ion-avatar slot="start" class="wrapper__content__header__toolbar__avatar">
       <img class="wrapper__content__header__toolbar__avatar__img" alt="Imagem do usuário"
-        src="https://ionicframework.com/docs/demos/api/avatar/avatar.svg">
+        src="./../../../../../assets/images/avatar.png">
     </ion-avatar>
 
     <ion-label class="wrapper__content__header__toolbar__label">
-      <h3 class="wrapper__content__header__toolbar__label__title">Username</h3>
-      <p class="wrapper__content__header__toolbar__label__subtitle">Rua Atibaia, mansão do Lula</p>
+      <h3 class="wrapper__content__header__toolbar__label__title">{{ nome }} {{ sobrenome }}</h3>
+      <p class="wrapper__content__header__toolbar__label__subtitle">{{ enderecoCompleto }}</p>
     </ion-label>
   </ion-toolbar>
 </ion-header>
