--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -2,44 +2,35 @@
   <form class="bmd-form login-form" [formGroup]="loginForm">
 
     <section class="login-form__img">
-      <img 
-        src="../../assets/images/auth-icon.png"
-        alt="Logotipo da Bemed">
+      <img src="../../assets/images/auth-icon.png" alt="Logotipo da Bemed">
     </section>
 
     <ion-item class="bmd-form__item">
       <ion-label position="floating">Login</ion-label>
       <ion-input formControlName="login"></ion-input>
     </ion-item>
-    <app-form-field-message *ngIf="isFieldInvalid('login')" [controlErrors]="getControlErrorsList('login')" formFieldName='login'></app-form-field-message>
+    <app-form-field-message *ngIf="isFieldInvalid('login')" [controlErrors]="getControlErrorsList('login')"
+      formFieldName='login'></app-form-field-message>
 
     <ion-item class="bmd-form__item">
       <ion-label position="floating">Senha</ion-label>
-      <ion-input type="password" formControlName="password"></ion-input>
+      <ion-input [type]="type" formControlName="password"></ion-input>
+      <ion-icon slot="end" [name]="iconEye" class="passwordIcon" (click)="showOrHidePass()"></ion-icon>
     </ion-item>
-    <app-form-field-message *ngIf="isFieldInvalid('password')" [controlErrors]="getControlErrorsList('password')" formFieldName='password'></app-form-field-message>
+    <app-form-field-message *ngIf="isFieldInvalid('password')" [controlErrors]="getControlErrorsList('password')"
+      formFieldName='password'></app-form-field-message>
 
-    <ion-button 
-      color="tertiary" 
-      class="bmd-form__button" 
-      [disabled]="loginForm.invalid"
-      (click)="doLogin()">
+    <ion-button color="tertiary" class="bmd-form__button" [disabled]="loginForm.invalid" (click)="doLogin()">
       Entrar
     </ion-button>
-    <ion-button 
-      color="danger" 
-      fill="outline" 
-      class="bmd-form__button"
-      (click)="createAccount()">
+    <ion-button color="danger" fill="outline" class="bmd-form__button" (click)="createAccount()">
       Quero criar uma conta
     </ion-button>
 
-    <a 
-      href="#" 
-      class="login-form__forgot-pass">
-        esqueci minha senha
+    <a href="#" class="login-form__forgot-pass">
+      esqueci minha senha
     </a>
-    
+
   </form>
 
 </ion-content>
